--- a/studio-sanity_react/package.json
+++ b/studio-sanity_react/package.json
@@ -15,10 +15,12 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.93.0",
+    "@sanity/document-internationalization": "^3.3.2",
+    "@sanity/vision": "^3.94.2",
     "react": "^19.1",
     "react-dom": "^19.1",
-    "sanity": "^3.93.0",
+    "react-is": "^19.1.0",
+    "sanity": "^3.94.2",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
